# Motion-Stack

./: .dockerignore  .gitignore  02BRL_easy_control.bash  03BRL_easy_control.bash  04BRL_easy_control.bash  BL_rviz.bash  BRL_rviz.bash  BRL_rviz.sh  KILLNODES.bash  LAUNCH.bash  Makefile  PUSHSSH.bash  README.md  SEND_JS.bash  build_messages.bash  docs_gen.sh  dodo.py  doit_config.py  general_launch_settings.py  launch_align.bash  launch_limit.bash  launch_mocap.bash  launch_only_rviz.bash  launch_operator.bash  launch_operator.sh  launch_rqt.bash  launch_rqt.sh  launch_simu_rviz.bash  launch_stack.bash  launch_stack_rviz.launch.py  make_docs.sh  multi_auto_place.bash  operator.bash  pixi.toml  robot_launcher.launch.py  robot_place.bash  ur16e_raw.urdf
src/: src
src/easy_robot_control/: offset_M1.csv  offset_M2.csv  offset_M3.csv  offset_M4.csv  offsets.csv  package.xml  requirements.txt  setup.cfg  setup.py
src/easy_robot_control/easy_robot_control/: EliaNode.py  __init__.py  calibration.py  gait_key_dev.py  gait_node.py  ik_heavy_node.py  ik_node.py  joint_state_interface.py  lazy_joint_state_publisher.py  leg_api.py  leg_node.py  limit_go.py  mover_node - Copy.py  mover_node.py  offsetter.py  test.py
src/easy_robot_control/easy_robot_control/injection/: __init__.py  offsetter.py  topic_pub.py
src/easy_robot_control/easy_robot_control/launch/: __init__.py  builder.py  default_params.py  zero.launch.py
src/easy_robot_control/easy_robot_control/my_rtb_fix/: README.md  fixed_urdf.py
src/easy_robot_control/easy_robot_control/old/: ik_node.py  inverse_kinematics.py  limit_go.py  movable_gradient_descent.py  stability.py  utilities.py
src/easy_robot_control/easy_robot_control/python_package_include/: distance_and_reachable_function.py  hero_mapping.py  inverse_kinematics.py  joint_state_util.py  map.npy  multi_leg_gradient.py  pure_remap.py  stability.py  state_remaper.py  utilities.py
src/easy_robot_control/easy_robot_control/ros2_numpy/: transformations.py
src/easy_robot_control/easy_robot_control/utils/: csv.py  hero_mapping.py  hyper_sphere_clamp.py  joint_state_util.py  math.py  state_remaper.py  trajectories.py
src/easy_robot_control/launch/: 02lvl_ik.launch.py  03lvl_leg_movement.launch.py  04lvl_body_movement.launch.py  default_params.py  gusta.launch.py  h7dragon_real_single.py  hero_3leg.py  hero_3legwheel.py  hero_7dof.py  hero_7dof_base_dual.py  hero_7dof_dragon.py  hero_7dof_real.py  hero_7dof_rviz.py  hero_all.py  hero_dragon.py  hero_single.py  hero_vehicle.py  hero_vehicule.py  launch_setting.py  lvl_01_joints.py  lvl_02_ik.py  lvl_03_leg.py  lvl_04_mover.py  lvl_05_gait.py  mglimb_7dof.py  mh_unified.py  moonbot_hero_onewheel.launch.py  moonbot_hero_onewheel.py  moonbot_zero.launch.py  moonbot_zero.py  operator.launch.py  realman_75.py  ur16_grip.py  ur16e.launch.py
src/easy_robot_control/test/: test_imports.py  test_pure_remap.py  test_state_remap.py  test_state_remapper.py
src/easy_robot_control/urdf/: moonbot7.urdf  moonbot7save.urdf  moonbotX.urdf
src/easy_robot_control/urdf/moonbot2/: materials.xacro  moonbot2.gazebo  moonbot2.urdf  moonbot2.xacro
src/keyboard_event_msgs/: CMakeLists.txt  package.xml  pixi-humble.toml  pixi-jazzy.toml  pixi-kilted.toml  pixi.toml  pkg.bash
src/keyboard_event_msgs/msg/: Key.msg
src/keyboard_event_msgs/pixi-humble/: pixi.toml
src/keyboard_event_msgs/pixi-jazzy/: pixi.toml
src/keyboard_event_msgs/pixi-kilted/: pixi.toml
src/moonbot_zero_tuto/: package.xml  pixi-humble.toml  pixi-jazzy.toml  pixi-kilted.toml  pixi.toml  setup.cfg  setup.py
src/moonbot_zero_tuto/launch/: myrobot.launch.py  real_moonbot.launch.py
src/moonbot_zero_tuto/moonbot_zero_tuto/: high_level.py  high_lvl_debug.py  lvl1.py
src/moonbot_zero_tuto/urdf/: moonbot_zero.xacro
src/motion_stack/: package.xml  pixi-humble.toml  pixi-jazzy.toml  pixi-kilted.toml  pixi.toml  pkg.bash  setup.cfg  setup.py
src/motion_stack/launch/: debug.launch.py  moonbot_zero.launch.py  rviz_settings.rviz  rviz_simu.launch.py  rviz_vizu.launch.py  ur16e.launch.py
src/motion_stack/motion_stack/: __init__.py  high_level_louis.py
src/motion_stack/motion_stack/api/: __init__.py  ik_syncer.py  joint_syncer.py
src/motion_stack/motion_stack/api/injection/: __init__.py  offsetter.py  remapper.py
src/motion_stack/motion_stack/api/launch/: __init__.py  builder.py  default_params.py
src/motion_stack/motion_stack/api/ros2/: __init__.py  communication.py  ik_api.py  joint_api.py  joint_rework.py  leg_api.py  lvl1.py  offsetter.py  state_to_topic.py
src/motion_stack/motion_stack/core/: __init__.py  lvl1_joint.py  lvl1_pipeline.py  lvl1_rework.py  lvl2_ik.py
src/motion_stack/motion_stack/core/rtb_fix/: fixed_urdf.py  patch.py
src/motion_stack/motion_stack/ros2/: __init__.py  communication.py  lvl1_node.py
src/motion_stack/test/: conftest.py  pytest.ini  test_imports.py  test_joint_state.py  test_remapper.py  test_state_remapper.py  test_time.py
src/motion_stack/test/core/: test_buffer.py
src/motion_stack/test/test_core/: test_buffer.py  test_lvl1.py  test_pipeline.py
src/motion_stack/test/test_zenoh/: test_lvl1.py  test_pubsub_js.py  test_serialize.py  trashtest_pubsub_js.py
src/motion_stack/test/zenoh/: test_pubsub_js.py  test_serialize.py
src/motion_stack_tuto/: package.xml  pixi-humble.toml  pixi-jazzy.toml  pixi-kilted.toml  pixi.toml  setup.cfg  setup.py
src/motion_stack_tuto/launch/: myrobot.launch.py  real_moonbot.launch.py
src/motion_stack_tuto/motion_stack_tuto/: high_level.py  high_lvl_debug.py  lvl1_dynamixel.py
src/motion_stack_tuto/urdf/: moonbot_zero.xacro
src/ms_operator/: package.xml  pixi-humble.toml  pixi-jazzy.toml  pixi-kilted.toml  pixi.toml  setup.cfg  setup.py
src/ms_operator/ms_operator/: ascii.py  operator_node.py  operator_tui.py  operator_utils.py
src/realman_interface/: package.xml  setup.cfg  setup.py
src/realman_interface/config/: realman_interface.yaml
src/realman_interface/launch/: full_launch.py  realman_interface_launch.py
src/realman_interface/realman_interface/: interface_node.py
(+786 files in other folders)
