<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>motion_stack</name>
  <version>0.0.0</version>
  <description>Modular walking robots or a single robotic arm, seamlessly bring your robots to life with just a URDF! Built for maximum flexibility, ease of use and source-code customization.</description>
  <maintainer email="neppel.elian.s6@dc.tohoku.ac.jp">Elian_NEPPEL</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>sdl</depend>
  <depend>python3-pkg-resources</depend>
  <depend>python3-setuptools</depend>
  <depend>joint_state_publisher</depend>

  <exec_depend>motion_stack_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>motion_stack_msgs</test_depend>
  <test_depend>robot_state_publisher</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <!-- <exec_depend>python3-numpy</exec_depend> -->
  <!-- <exec_depend>python-numpy-quaternion-pip</exec_depend> -->
  <!-- <exec_depend>python3-scipy</exec_depend> -->
  <exec_depend>python3-pytest</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
