<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_stack_tuto</name>
  <version>1.0.0</version>
  <description>Simple example for the motion stack</description>
  <maintainer email="elian.dev@posteo.com">Elian Neppel</maintainer>
  <license>MIT</license>

  <exec_depend>motion_stack</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
