<?xml version="1.0"?>
<package format="3">
  <name>ms_operator</name>
  <version>1.0.0</version>
  <description>OperatorNode, TUI and utils for Motion Stack.</description>
  <maintainer email="karimov.shamistan.p8@dc.tohoku.ac.jp">Shamistan KARIMOV</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

