<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>realman_interface</name>
  <version>0.0.0</version>
  <description>Interface node between RealMan-75 robotic arm and Motion Stack</description>
  <maintainer email="ahresgg@gmail.com">Shamistan_KARIMOV</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>rm_ros_interfaces</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
